feat-workspace: finishing master workspace
